crates/zeppelin-embed-ffi/include/zeppelin_embed.h


typedef struct ZeDocId {
    uint64_t high;
    uint64_t low;
} ZeDocId;
typedef struct ZeMutationReport {
    uint32_t abi_size;
    uint32_t abi_reserved;
    uint64_t sequence;
    uint64_t generation;
} ZeMutationReport;
typedef struct ZeMaintainRequest {
    uint32_t abi_size;
    uint32_t abi_reserved;
    uint64_t wall_time_ns;
    uint64_t bytes;
} ZeMaintainRequest;
typedef struct ZeMaintainReport {
    uint32_t abi_size;
    uint32_t abi_reserved;
    uint64_t graphs_built;
    uint64_t bytes_consumed;
    uint64_t checkpoints_resumed;
    int32_t status;
    uint32_t reserved;
} ZeMaintainReport;
typedef struct ZeAttributeValue {
    uint32_t attribute_id;
    int32_t value_type;
    uint64_t u64_value;
    int64_t i64_value;
    double f64_value;
    uint32_t bool_value;
    const uint8_t *string_value;
    size_t string_len;
} ZeAttributeValue;
typedef struct ZeStoredDocument {
    uint32_t has_document;
    struct ZeDocId doc_id;
    uint64_t revision;
    int64_t timestamp;
    const float *vector;
    size_t vector_len;
    const uint8_t *text;
    size_t text_len;
    const uint8_t *metadata;
    size_t metadata_len;
    const struct ZeAttributeValue *attributes;
    size_t attribute_count;
} ZeStoredDocument;
typedef struct ZeDeleteRequest {
    uint32_t abi_size;
    uint32_t abi_reserved;
    const struct ZeDocId *doc_ids;
    size_t doc_id_count;
} ZeDeleteRequest;
typedef struct ZeFilterNode {
    int32_t op;
    uint32_t attribute_id;
    const struct ZeAttributeValue *values;
    size_t value_count;
    uint32_t has_lower;
    struct ZeAttributeValue lower;
    uint32_t lower_inclusive;
    uint32_t has_upper;
    struct ZeAttributeValue upper;
    uint32_t upper_inclusive;
    uint32_t children_start;
    uint32_t children_count;
} ZeFilterNode;
typedef struct ZeFilter {
    uint32_t abi_size;
    uint32_t abi_reserved;
    const struct ZeFilterNode *nodes;
    size_t node_count;
    uint32_t root;
} ZeFilter;
typedef uint64_t ze_cancel_token;
typedef struct ZeScanResult {
    uint32_t abi_size;
    uint32_t abi_reserved;
    struct ZeStoredDocument *documents;
    size_t document_count;
    uint64_t generation;
    uint32_t has_more;
    uint8_t next_segment_id[16];
    uint32_t next_row;
    uint32_t next_phase;
} ZeScanResult;
typedef struct ZeCountRequest {
    uint32_t abi_size;
    uint32_t abi_reserved;
    const struct ZeFilter *filter;
    uint32_t has_timestamp_range;
    int64_t start_ts;
    int64_t end_ts;
} ZeCountRequest;
typedef struct ZeCountResult {
    uint32_t abi_size;
    uint32_t abi_reserved;
    uint64_t count;
    uint64_t generation;
} ZeCountResult;
typedef struct ZeSearchRequest {
    uint32_t abi_size;
    uint32_t abi_reserved;
    const float *vector;
    size_t vector_len;
    size_t dimension;
    size_t k;
    size_t thread_budget;
    uint32_t has_tier;
    int32_t tier;
    int32_t graph_profile;
    uint32_t reserved;
    size_t graph_ef;
    uint64_t graph_seed;
    ze_cancel_token cancel_token;
    uint64_t deadline_ns;
} ZeSearchRequest;
typedef struct ZeSearchHit {
    uint32_t source_kind;
    uint32_t reserved;
    uint8_t segment_id[16];
    uint32_t local_row;
    uint32_t has_document;
    struct ZeDocId doc_id;
    uint64_t revision;
    float score;
    uint32_t reserved_tail;
} ZeSearchHit;
typedef struct ZeSearchResult {
    uint32_t abi_size;
    uint32_t abi_reserved;
    struct ZeSearchHit *hits;
    size_t hit_count;
    uint64_t generation;
    uint64_t dims_touched;
    uint64_t bytes_read;
    uint64_t threads_used;
    uint64_t graph_segments_traversed;
    uint64_t graph_validations;
    uint64_t graph_entry_seed_discoveries;
    uint64_t graph_visited_epoch_clears;
    uint64_t graph_candidates_scored;
    uint64_t graph_candidates_rescored;
    uint64_t graph_segments_pruned_by_bound;
} ZeSearchResult;
typedef struct ZeSearchFilteredRequest {
    uint32_t abi_size;
    uint32_t abi_reserved;
    struct ZeSearchRequest search;
    const struct ZeFilter *filter;
} ZeSearchFilteredRequest;
typedef struct ZeQueryRequest {
    uint32_t abi_size;
    uint32_t abi_reserved;
    const float *vector;
    size_t vector_len;
    size_t dimension;
    const uint8_t *text;
    size_t text_len;
    size_t k;
    size_t thread_budget;
    uint32_t has_tier;
    int32_t tier;
    int32_t graph_profile;
    uint32_t lexical_flags;
    size_t graph_ef;
    uint64_t graph_seed;
    uint32_t has_alpha;
    uint32_t rules_enabled;
    double alpha;
    uint32_t has_max_rounds;
    uint32_t quoted_phrase;
    uint64_t max_rounds;
    uint32_t identifier_token;
    uint32_t has_rarest_exact_document_frequency;
    uint64_t rarest_exact_document_frequency;
    ze_cancel_token cancel_token;
    uint64_t deadline_ns;
} ZeQueryRequest;
typedef struct ZeQueryHit {
    uint32_t has_document;
    uint32_t has_revision;
    struct ZeDocId doc_id;
    uint64_t revision;
    double score;
    uint32_t has_vector_score;
    uint32_t has_lexical_score;
    double vector_squared_l2;
    double lexical_bm25;
} ZeQueryHit;
typedef struct ZeQueryResult {
    uint32_t abi_size;
    uint32_t abi_reserved;
    struct ZeQueryHit *hits;
    size_t hit_count;
    uint64_t generation;
    int32_t mode;
    uint32_t approximate;
    uint32_t exact_rescore;
    uint32_t budget_exhausted;
    uint32_t has_fusion;
    int32_t fusion_method;
    double effective_alpha;
    uint64_t fusion_rounds;
    uint32_t has_embedding_epoch;
    uint32_t has_tokenizer_epoch;
    uint64_t embedding_epoch;
    uint64_t tokenizer_epoch;
    uint64_t dims_touched;
    uint64_t bytes_read;
    uint64_t docs_evaluated;
    uint64_t postings_decoded;
} ZeQueryResult;
typedef struct ZeSealRequest {
    uint32_t abi_size;
    uint32_t abi_reserved;
    ze_cancel_token cancel_token;
} ZeSealRequest;
typedef struct ZeGenerationReport {
    uint32_t abi_size;
    uint32_t abi_reserved;
    uint64_t generation;
} ZeGenerationReport;
typedef struct ZeDropPartitionRequest {
    uint32_t abi_size;
    uint32_t abi_reserved;
    int64_t start_ts;
    int64_t end_ts;
} ZeDropPartitionRequest;
typedef struct ZePartitionReport {
    uint32_t abi_size;
    uint32_t abi_reserved;
    uint64_t generation;
    uint64_t segments_dropped;
    uint64_t bytes_reclaimed;
    uint64_t straddlers_skipped;
    uint32_t is_no_op;
    uint32_t reserved;
} ZePartitionReport;
typedef struct ZeRetentionRequest {
    uint32_t abi_size;
    uint32_t abi_reserved;
    int64_t window;
    int64_t now_ts;
} ZeRetentionRequest;
typedef struct ZePurgeRequest {
    uint32_t abi_size;
    uint32_t abi_reserved;
    const struct ZeDocId *doc_ids;
    size_t doc_id_count;
} ZePurgeRequest;
typedef struct ZePurgeTokenReport {
    uint32_t abi_size;
    uint32_t abi_reserved;
    uint64_t token_id;
    uint64_t generation;
    uint64_t unknown_id_count;
    uint32_t is_no_op;
    uint32_t reserved;
} ZePurgeTokenReport;
typedef struct ZeAwaitPurgeRequest {
    uint32_t abi_size;
    uint32_t abi_reserved;
    uint64_t token_id;
} ZeAwaitPurgeRequest;
typedef struct ZePurgeReport {
    uint32_t abi_size;
    uint32_t abi_reserved;
    uint64_t generation;
    uint64_t segments_rewritten;
    uint64_t unknown_id_count;
    uint32_t wal_rewritten;
    uint32_t is_no_op;
} ZePurgeReport;